syntax = "proto3";

package centy;

// CentyDaemon service - manages .centy folder operations
service CentyDaemon {
  // Initialize a .centy folder in the specified directory
  rpc Init(InitRequest) returns (InitResponse);

  // Get reconciliation plan without executing it
  rpc GetReconciliationPlan(GetReconciliationPlanRequest) returns (ReconciliationPlan);

  // Execute reconciliation with user decisions
  rpc ExecuteReconciliation(ExecuteReconciliationRequest) returns (InitResponse);

  // Create a new issue
  rpc CreateIssue(CreateIssueRequest) returns (CreateIssueResponse);

  // Get a single issue by ID (UUID or legacy number)
  rpc GetIssue(GetIssueRequest) returns (Issue);

  // Get a single issue by display number (human-readable number like 1, 2, 3)
  rpc GetIssueByDisplayNumber(GetIssueByDisplayNumberRequest) returns (Issue);

  // List all issues with optional filtering
  rpc ListIssues(ListIssuesRequest) returns (ListIssuesResponse);

  // Update an existing issue
  rpc UpdateIssue(UpdateIssueRequest) returns (UpdateIssueResponse);

  // Delete an issue
  rpc DeleteIssue(DeleteIssueRequest) returns (DeleteIssueResponse);

  // Get the next issue number
  rpc GetNextIssueNumber(GetNextIssueNumberRequest) returns (GetNextIssueNumberResponse);

  // Read the manifest
  rpc GetManifest(GetManifestRequest) returns (Manifest);

  // Read configuration
  rpc GetConfig(GetConfigRequest) returns (Config);

  // Check if centy is initialized in a directory
  rpc IsInitialized(IsInitializedRequest) returns (IsInitializedResponse);

  // ============ Doc RPCs ============

  // Create a new documentation file
  rpc CreateDoc(CreateDocRequest) returns (CreateDocResponse);

  // Get a single doc by slug
  rpc GetDoc(GetDocRequest) returns (Doc);

  // List all docs
  rpc ListDocs(ListDocsRequest) returns (ListDocsResponse);

  // Update an existing doc
  rpc UpdateDoc(UpdateDocRequest) returns (UpdateDocResponse);

  // Delete a doc
  rpc DeleteDoc(DeleteDocRequest) returns (DeleteDocResponse);

  // ============ Project Registry RPCs ============

  // List all tracked projects
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);

  // Manually register a project for tracking
  rpc RegisterProject(RegisterProjectRequest) returns (RegisterProjectResponse);

  // Remove a project from tracking
  rpc UntrackProject(UntrackProjectRequest) returns (UntrackProjectResponse);

  // Get info about a specific project
  rpc GetProjectInfo(GetProjectInfoRequest) returns (GetProjectInfoResponse);
}

// ============ Init Messages ============

message InitRequest {
  // The project directory path where .centy should be initialized
  string project_path = 1;

  // If true, skip prompts and use defaults (create all, restore all, reset none)
  bool force = 2;

  // Decisions for files that need user input (only used when force=false)
  ReconciliationDecisions decisions = 3;
}

message InitResponse {
  bool success = 1;
  string error = 2;

  // Summary of what was done
  repeated string created = 3;
  repeated string restored = 4;
  repeated string reset = 5;
  repeated string skipped = 6;

  // The updated manifest
  Manifest manifest = 7;
}

message GetReconciliationPlanRequest {
  string project_path = 1;
}

message ReconciliationPlan {
  // Files that need to be created (not on disk, not in manifest)
  repeated FileInfo to_create = 1;

  // Files that were deleted but exist in manifest (can be restored)
  repeated FileInfo to_restore = 2;

  // Files that were modified from original (hash mismatch)
  repeated FileInfo to_reset = 3;

  // Files that are up to date
  repeated FileInfo up_to_date = 4;

  // User-created files (not managed by centy)
  repeated FileInfo user_files = 5;

  // Whether user decisions are needed
  bool needs_decisions = 6;
}

message ExecuteReconciliationRequest {
  string project_path = 1;
  ReconciliationDecisions decisions = 2;
}

message ReconciliationDecisions {
  // Paths of files to restore (from to_restore list)
  repeated string restore = 1;

  // Paths of files to reset (from to_reset list)
  repeated string reset = 2;
}

// ============ Issue Messages ============

message CreateIssueRequest {
  string project_path = 1;
  string title = 2;
  string description = 3;
  int32 priority = 4;   // 1 = highest priority, 0 = use default
  string status = 5;    // default: "open"
  map<string, string> custom_fields = 6;
  string template = 7;  // Optional template name (without .md extension)
}

message CreateIssueResponse {
  bool success = 1;
  string error = 2;

  // The created issue ID (UUID)
  string id = 3;

  // Human-readable display number (1, 2, 3...)
  uint32 display_number = 4;

  // Legacy: same as id (for backward compatibility)
  string issue_number = 5;

  // Paths to created files
  repeated string created_files = 6;

  // The updated manifest
  Manifest manifest = 7;
}

message GetNextIssueNumberRequest {
  string project_path = 1;
}

message GetNextIssueNumberResponse {
  string issue_number = 1;
}

// Issue represents a full issue with all its data
message Issue {
  // UUID-based issue ID (folder name)
  string id = 1;

  // Human-readable display number (1, 2, 3...)
  uint32 display_number = 2;

  // Legacy: same as id (for backward compatibility)
  string issue_number = 3;

  string title = 4;
  string description = 5;
  IssueMetadata metadata = 6;
}

message IssueMetadata {
  // Human-readable display number (1, 2, 3...)
  uint32 display_number = 1;
  string status = 2;              // e.g., "open", "in-progress", "closed"
  int32 priority = 3;             // 1 = highest priority, N = lowest
  string created_at = 4;          // ISO timestamp
  string updated_at = 5;          // ISO timestamp
  map<string, string> custom_fields = 6;
  string priority_label = 7;      // Human-readable label (e.g., "high", "P1")
}

message GetIssueRequest {
  string project_path = 1;
  string issue_id = 2;            // UUID or legacy issue number (e.g., "0001")
}

message GetIssueByDisplayNumberRequest {
  string project_path = 1;
  uint32 display_number = 2;      // Human-readable number (1, 2, 3...)
}

message ListIssuesRequest {
  string project_path = 1;

  // Optional filters
  string status = 2;              // Filter by status (empty = all)
  int32 priority = 3;             // Filter by priority (0 = all)
}

message ListIssuesResponse {
  repeated Issue issues = 1;
  int32 total_count = 2;
}

message UpdateIssueRequest {
  string project_path = 1;
  string issue_id = 2;            // UUID or legacy issue number

  // Fields to update (empty string = don't update, 0 = don't update priority)
  string title = 3;
  string description = 4;
  string status = 5;
  int32 priority = 6;             // 0 = don't update, otherwise 1-N
  map<string, string> custom_fields = 7;
}

message UpdateIssueResponse {
  bool success = 1;
  string error = 2;
  Issue issue = 3;                // The updated issue
  Manifest manifest = 4;
}

message DeleteIssueRequest {
  string project_path = 1;
  string issue_id = 2;            // UUID or legacy issue number
}

message DeleteIssueResponse {
  bool success = 1;
  string error = 2;
  Manifest manifest = 3;          // Updated manifest after deletion
}

// ============ Manifest Messages ============

message GetManifestRequest {
  string project_path = 1;
}

message Manifest {
  int32 schema_version = 1;
  string centy_version = 2;
  string created_at = 3;
  string updated_at = 4;
  repeated ManagedFile managed_files = 5;
}

message ManagedFile {
  string path = 1;
  string hash = 2;
  string version = 3;
  string created_at = 4;
  FileType file_type = 5;
}

enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
  FILE_TYPE_FILE = 1;
  FILE_TYPE_DIRECTORY = 2;
}

message FileInfo {
  string path = 1;
  FileType file_type = 2;
  string hash = 3;
  string content_preview = 4;  // For display purposes
}

// ============ Config Messages ============

message GetConfigRequest {
  string project_path = 1;
}

message Config {
  repeated CustomFieldDefinition custom_fields = 1;
  map<string, string> defaults = 2;
  int32 priority_levels = 3;      // Number of priority levels (default: 3)
  repeated string allowed_states = 4;  // Allowed status values (default: ["open", "in-progress", "closed"])
  string default_state = 5;            // Default state for new issues (default: "open")
}

message CustomFieldDefinition {
  string name = 1;
  string field_type = 2;  // "string", "number", "boolean", "enum"
  bool required = 3;
  string default_value = 4;
  repeated string enum_values = 5;  // For enum type
}

// ============ Utility Messages ============

message IsInitializedRequest {
  string project_path = 1;
}

message IsInitializedResponse {
  bool initialized = 1;
  string centy_path = 2;  // Full path to .centy folder if initialized
}

// ============ Doc Messages ============

message CreateDocRequest {
  string project_path = 1;
  string title = 2;               // Doc title (used to generate slug)
  string content = 3;             // Markdown content
  string slug = 4;                // Optional custom slug (auto-generated from title if empty)
  string template = 5;            // Optional template name (without .md extension)
}

message CreateDocResponse {
  bool success = 1;
  string error = 2;
  string slug = 3;                // The created doc slug
  string created_file = 4;        // Path to created file
  Manifest manifest = 5;
}

message GetDocRequest {
  string project_path = 1;
  string slug = 2;                // e.g., "getting-started"
}

message ListDocsRequest {
  string project_path = 1;
}

message ListDocsResponse {
  repeated Doc docs = 1;
  int32 total_count = 2;
}

// Doc represents a documentation file
message Doc {
  string slug = 1;                // e.g., "getting-started"
  string title = 2;
  string content = 3;             // Full markdown content
  DocMetadata metadata = 4;
}

message DocMetadata {
  string created_at = 1;          // ISO timestamp
  string updated_at = 2;          // ISO timestamp
}

message UpdateDocRequest {
  string project_path = 1;
  string slug = 2;

  // Fields to update (empty string = don't update)
  string title = 3;
  string content = 4;
  string new_slug = 5;            // Rename the doc (empty = keep current slug)
}

message UpdateDocResponse {
  bool success = 1;
  string error = 2;
  Doc doc = 3;                    // The updated doc
  Manifest manifest = 4;
}

message DeleteDocRequest {
  string project_path = 1;
  string slug = 2;
}

message DeleteDocResponse {
  bool success = 1;
  string error = 2;
  Manifest manifest = 3;
}

// ============ Project Registry Messages ============

// Returned by API (enriched with live data from disk)
message ProjectInfo {
  string path = 1;                // Absolute path to project
  string first_accessed = 2;      // ISO timestamp
  string last_accessed = 3;       // ISO timestamp
  uint32 issue_count = 4;         // Fetched live from .centy/issues/
  uint32 doc_count = 5;           // Fetched live from .centy/docs/
  bool initialized = 6;           // Fetched live (manifest exists)
  string name = 7;                // Fetched live (directory name)
}

message ListProjectsRequest {
  bool include_stale = 1;         // Include projects where path no longer exists
}

message ListProjectsResponse {
  repeated ProjectInfo projects = 1;
  int32 total_count = 2;
}

message RegisterProjectRequest {
  string project_path = 1;        // Path to register
}

message RegisterProjectResponse {
  bool success = 1;
  string error = 2;
  ProjectInfo project = 3;        // The registered project info
}

message UntrackProjectRequest {
  string project_path = 1;
}

message UntrackProjectResponse {
  bool success = 1;
  string error = 2;
}

message GetProjectInfoRequest {
  string project_path = 1;
}

message GetProjectInfoResponse {
  bool found = 1;
  ProjectInfo project = 2;
}
